--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
 
   <section class="gallery-section">
     <div class="gallery-container">
-      <div class="gallery-item"><img src="images/ph1.jpg" alt="Photo 1"></div>
-      <div class="gallery-item"><img src="images/ph (2).jpg" alt="Photo 2"></div>
-      <div class="gallery-item"><img src="images/ph (3).jpg" alt="Photo 3"></div>
-      <div class="gallery-item"><img src="images/ph (4).jpg" alt="Photo 4"></div>
-      <div class="gallery-item"><img src="images/ph (5).jpg" alt="Photo 5"></div>
-      <div class="gallery-item"><img src="images/ph (6).jpg" alt="Photo 6"></div>
-      <div class="gallery-item"><img src="images/ph (7).jpg" alt="Photo 7"></div>
-      <div class="gallery-item"><img src="images/ph (8).jpg" alt="Photo 8"></div>
-      <div class="gallery-item"><img src="images/ph (9).jpg" alt="Photo 9"></div>
-      <div class="gallery-item"><img src="images/ph (10).jpg" alt="Photo 10"></div>
-      <div class="gallery-item"><img src="images/ph (11).jpg" alt="Photo 11"></div>
-      <div class="gallery-item"><img src="images/ph (12).jpg" alt="Photo 12"></div>
-      <div class="gallery-item"><img src="images/ph (13).jpg" alt="Photo 13"></div>
-      <div class="gallery-item"><img src="images/ph (14).jpg" alt="Photo 14"></div>
-      <div class="gallery-item"><img src="images/ph (15).jpg" alt="Photo 15"></div>
-      <div class="gallery-item"><img src="images/ph (16).jpg" alt="Photo 16"></div>
+      <div class="gallery-item"><img src="ph1.jpg" alt="Photo 1"></div>
+      <div class="gallery-item"><img src="ph (2).jpg" alt="Photo 2"></div>
+      <div class="gallery-item"><img src="ph (3).jpg" alt="Photo 3"></div>
+      <div class="gallery-item"><img src="ph (4).jpg" alt="Photo 4"></div>
+      <div class="gallery-item"><img src="ph (5).jpg" alt="Photo 5"></div>
+      <div class="gallery-item"><img src="ph (6).jpg" alt="Photo 6"></div>
+      <div class="gallery-item"><img src="ph (7).jpg" alt="Photo 7"></div>
+      <div class="gallery-item"><img src="ph (8).jpg" alt="Photo 8"></div>
+      <div class="gallery-item"><img src="ph (9).jpg" alt="Photo 9"></div>
+      <div class="gallery-item"><img src="ph (10).jpg" alt="Photo 10"></div>
+      <div class="gallery-item"><img src="ph (11).jpg" alt="Photo 11"></div>
+      <div class="gallery-item"><img src="ph (12).jpg" alt="Photo 12"></div>
+      <div class="gallery-item"><img src="ph (13).jpg" alt="Photo 13"></div>
+      <div class="gallery-item"><img src="ph (14).jpg" alt="Photo 14"></div>
+      <div class="gallery-item"><img src="ph (15).jpg" alt="Photo 15"></div>
+      <div class="gallery-item"><img src="ph (16).jpg" alt="Photo 16"></div>
     </div>
   </section>
 
